crates/search/tests/upgrade/v1_12/snapshots/v1_12_0.rs/check_the_index_scheduler/batches_filter_batchUids_equal_10.snap
---
source: crates/indexsearch/tests/upgrade/v1_12/v1_12_0.rs
---
{
  "results": [
    {
      "uid": 10,
      "progress": null,
      "details": {
        "faceting": {
          "maxValuesPerFacet": 99
        },
        "pagination": {
          "maxTotalHits": 15
        }
      },
      "stats": {
        "totalNbTasks": 1,
        "status": {
          "succeeded": 1
        },
        "types": {
          "settingsUpdate": 1
        },
        "indexUids": {
          "kefir": 1
        }
      },
      "duration": "[duration]",
      "startedAt": "[date]",
      "finishedAt": "[date]",
      "batchStrategy": "unspecified"
    }
  ],
  "total": 1,
  "limit": 20,
  "from": 10,
  "next": null
}
